# stock_market

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: logger.h
order_service/: CMakeLists.txt  order.h  order_manager.cpp  order_manager.h  order_receiver.h  order_reciever.cpp  order_service.cpp  order_service.h
service_base/: CMakeLists.txt  service_base.cpp  service_base.h
web_client/: index.html  styles.css
web_client/js/: handling.js  utils.js  validation.js
